[package]
name = "meh"
version = "0.4.1"
authors = ["commit-person <commit-person@localhost>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
attohttpc = { version = "0.9.0", features = ["json"] }
clap = "2.33.0"
dirs = "2.0.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.8"
